--- a/aes_audio_warning/aes_audio_warning.vcxproj
+++ b/aes_audio_warning/aes_audio_warning.vcxproj
@@ -145,4 +145,9 @@
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties arduino.upload.port="COM3" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
